--- a/TrainingExe1/Exam2.xib
+++ b/TrainingExe1/Exam2.xib
@@ -1,5 +1,5 @@
-<?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11762" systemVersion="16D32" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8" standalone="no"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11762" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -211,7 +211,6 @@
                         <constraint firstAttribute="height" constant="32" id="2V0-xj-FwA"/>
                         <constraint firstAttribute="width" constant="32" id="8oR-Km-gZo"/>
                     </constraints>
-                    <state key="normal" image="radio.png"/>
                     <connections>
                         <action selector="actionMale:" destination="-1" eventType="touchUpInside" id="Wja-TD-WFP"/>
                     </connections>
@@ -222,7 +221,6 @@
                         <constraint firstAttribute="width" constant="32" id="Cmx-no-mlM"/>
                         <constraint firstAttribute="height" constant="32" id="cKe-mc-pTy"/>
                     </constraints>
-                    <state key="normal" image="radio.png"/>
                     <connections>
                         <action selector="actionFeMail:" destination="-1" eventType="touchUpInside" id="BhZ-uH-lgJ"/>
                     </connections>
@@ -302,7 +300,4 @@
             <point key="canvasLocation" x="-1120.5" y="-858.5"/>
         </view>
     </objects>
-    <resources>
-        <image name="radio.png" width="32" height="32"/>
-    </resources>
 </document>
