--- a/TrainingExe1/Exam6.xib
+++ b/TrainingExe1/Exam6.xib
@@ -5,22 +5,13 @@
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11762"/>
-        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="Exam6" customModule="TrainingExe1" customModuleProvider="target">
             <connections>
-                <outlet property="poke1" destination="tZe-SV-Y7W" id="ndN-LN-F2w"/>
-                <outlet property="poke2" destination="nlz-eP-HyR" id="Uk1-yh-egh"/>
-                <outlet property="poke3" destination="7Eg-fa-NT4" id="bM8-hs-KWF"/>
-                <outlet property="poke4" destination="2un-KD-Bue" id="Vo0-cG-Q0X"/>
-                <outlet property="poke5" destination="8Ms-jg-tVZ" id="a1w-u5-EIg"/>
-                <outlet property="poke6" destination="UhC-ya-6rS" id="Fm9-Mw-scn"/>
-                <outlet property="poke7" destination="1DV-TS-7Uo" id="bgX-lG-ulB"/>
-                <outlet property="poke8" destination="GVv-Ny-NyT" id="Y29-dT-AGN"/>
-                <outlet property="poke9" destination="VV5-4n-yA9" id="la8-ir-80O"/>
+                <outlet property="collectionView" destination="xyX-9e-jy9" id="0ta-IF-qrz"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -29,119 +20,31 @@
             <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="nlz-eP-HyR" customClass="PokeView" customModule="TrainingExe1" customModuleProvider="target">
-                    <rect key="frame" x="142" y="80" width="90" height="90"/>
+                <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="xyX-9e-jy9">
+                    <rect key="frame" x="0.0" y="60" width="375" height="500"/>
                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     <constraints>
-                        <constraint firstAttribute="width" constant="90" id="TDe-Bz-6az"/>
-                        <constraint firstAttribute="width" secondItem="nlz-eP-HyR" secondAttribute="height" multiplier="1:1" id="jSn-TM-qlr"/>
+                        <constraint firstAttribute="height" constant="500" id="XQ4-qe-9cm"/>
                     </constraints>
-                </view>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="tZe-SV-Y7W" customClass="PokeView" customModule="TrainingExe1" customModuleProvider="target">
-                    <rect key="frame" x="20" y="80" width="90" height="90"/>
-                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                    <constraints>
-                        <constraint firstAttribute="width" secondItem="tZe-SV-Y7W" secondAttribute="height" multiplier="1:1" id="NpE-kU-OWc"/>
-                        <constraint firstAttribute="width" constant="90" id="y7B-XG-pgN"/>
-                    </constraints>
-                </view>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="7Eg-fa-NT4" customClass="PokeView" customModule="TrainingExe1" customModuleProvider="target">
-                    <rect key="frame" x="265" y="80" width="90" height="90"/>
-                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                    <constraints>
-                        <constraint firstAttribute="width" secondItem="7Eg-fa-NT4" secondAttribute="height" multiplier="1:1" id="U7Q-Gf-sQa"/>
-                        <constraint firstAttribute="width" constant="90" id="nTd-Qx-Re6"/>
-                    </constraints>
-                </view>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8Ms-jg-tVZ" customClass="PokeView" customModule="TrainingExe1" customModuleProvider="target">
-                    <rect key="frame" x="142" y="220" width="90" height="90"/>
-                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                    <constraints>
-                        <constraint firstAttribute="width" secondItem="8Ms-jg-tVZ" secondAttribute="height" multiplier="1:1" id="QcA-2F-dXs"/>
-                        <constraint firstAttribute="width" constant="90" id="s3s-1J-4uM"/>
-                    </constraints>
-                </view>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2un-KD-Bue" customClass="PokeView" customModule="TrainingExe1" customModuleProvider="target">
-                    <rect key="frame" x="20" y="220" width="90" height="90"/>
-                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                    <constraints>
-                        <constraint firstAttribute="width" secondItem="2un-KD-Bue" secondAttribute="height" multiplier="1:1" id="Mfs-BV-x66"/>
-                        <constraint firstAttribute="width" constant="90" id="e8t-mU-CfK"/>
-                    </constraints>
-                </view>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="UhC-ya-6rS" customClass="PokeView" customModule="TrainingExe1" customModuleProvider="target">
-                    <rect key="frame" x="265" y="220" width="90" height="90"/>
-                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                    <constraints>
-                        <constraint firstAttribute="width" constant="90" id="RfT-Bh-bEz"/>
-                        <constraint firstAttribute="width" secondItem="UhC-ya-6rS" secondAttribute="height" multiplier="1:1" id="U9X-Rz-tIo"/>
-                    </constraints>
-                </view>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="GVv-Ny-NyT" customClass="PokeView" customModule="TrainingExe1" customModuleProvider="target">
-                    <rect key="frame" x="142" y="360" width="90" height="90"/>
-                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                    <constraints>
-                        <constraint firstAttribute="width" constant="90" id="hTk-sd-a21"/>
-                        <constraint firstAttribute="width" secondItem="GVv-Ny-NyT" secondAttribute="height" multiplier="1:1" id="p8z-gK-AW7"/>
-                    </constraints>
-                </view>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1DV-TS-7Uo" customClass="PokeView" customModule="TrainingExe1" customModuleProvider="target">
-                    <rect key="frame" x="20" y="360" width="90" height="90"/>
-                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                    <constraints>
-                        <constraint firstAttribute="width" secondItem="1DV-TS-7Uo" secondAttribute="height" multiplier="1:1" id="27F-vN-4G2"/>
-                        <constraint firstAttribute="width" constant="90" id="9kH-lZ-69f"/>
-                    </constraints>
-                </view>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="VV5-4n-yA9" customClass="PokeView" customModule="TrainingExe1" customModuleProvider="target">
-                    <rect key="frame" x="265" y="360" width="90" height="90"/>
-                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                    <constraints>
-                        <constraint firstAttribute="width" secondItem="VV5-4n-yA9" secondAttribute="height" multiplier="1:1" id="ic4-YF-186"/>
-                        <constraint firstAttribute="width" constant="90" id="xAL-Ob-gm7"/>
-                    </constraints>
-                </view>
+                    <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="YAO-ZQ-b4W">
+                        <size key="itemSize" width="100" height="100"/>
+                        <size key="headerReferenceSize" width="0.0" height="20"/>
+                        <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                        <inset key="sectionInset" minX="20" minY="0.0" maxX="20" maxY="0.0"/>
+                    </collectionViewFlowLayout>
+                    <connections>
+                        <outlet property="dataSource" destination="-1" id="7Y5-Qf-YUX"/>
+                        <outlet property="delegate" destination="-1" id="L6m-D5-xxS"/>
+                    </connections>
+                </collectionView>
             </subviews>
             <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
             <constraints>
-                <constraint firstItem="VV5-4n-yA9" firstAttribute="width" secondItem="VV5-4n-yA9" secondAttribute="height" multiplier="1:1" id="0Hq-Xx-Oxb"/>
-                <constraint firstItem="7Eg-fa-NT4" firstAttribute="width" secondItem="7Eg-fa-NT4" secondAttribute="height" multiplier="1:1" id="1ud-7i-AF0"/>
-                <constraint firstItem="tZe-SV-Y7W" firstAttribute="centerY" secondItem="nlz-eP-HyR" secondAttribute="centerY" id="3s3-1z-EsT"/>
-                <constraint firstItem="8Ms-jg-tVZ" firstAttribute="width" secondItem="8Ms-jg-tVZ" secondAttribute="height" multiplier="1:1" id="4sd-rv-CiM"/>
-                <constraint firstItem="GVv-Ny-NyT" firstAttribute="width" secondItem="GVv-Ny-NyT" secondAttribute="height" multiplier="1:1" id="9Fi-98-qhQ"/>
-                <constraint firstItem="UhC-ya-6rS" firstAttribute="width" secondItem="UhC-ya-6rS" secondAttribute="height" multiplier="1:1" id="A0i-BD-6jm"/>
-                <constraint firstItem="GVv-Ny-NyT" firstAttribute="width" secondItem="GVv-Ny-NyT" secondAttribute="height" multiplier="1:1" id="Aby-hW-A8f"/>
-                <constraint firstItem="GVv-Ny-NyT" firstAttribute="top" secondItem="8Ms-jg-tVZ" secondAttribute="bottom" constant="50" id="BM5-MK-nOY"/>
-                <constraint firstAttribute="trailing" secondItem="7Eg-fa-NT4" secondAttribute="trailing" constant="20" id="BNB-sz-wuW"/>
-                <constraint firstItem="UhC-ya-6rS" firstAttribute="centerY" secondItem="8Ms-jg-tVZ" secondAttribute="centerY" id="Cbn-FA-gdG"/>
-                <constraint firstItem="UhC-ya-6rS" firstAttribute="trailing" secondItem="7Eg-fa-NT4" secondAttribute="trailing" id="E3Q-oY-P0i"/>
-                <constraint firstItem="VV5-4n-yA9" firstAttribute="trailing" secondItem="7Eg-fa-NT4" secondAttribute="trailing" id="H9r-Fh-xDX"/>
-                <constraint firstItem="nlz-eP-HyR" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="JQX-dJ-ehO"/>
-                <constraint firstItem="1DV-TS-7Uo" firstAttribute="width" secondItem="1DV-TS-7Uo" secondAttribute="height" multiplier="1:1" id="LoW-Se-fMP"/>
-                <constraint firstItem="8Ms-jg-tVZ" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="N8J-lB-DMo"/>
-                <constraint firstItem="2un-KD-Bue" firstAttribute="width" secondItem="2un-KD-Bue" secondAttribute="height" multiplier="1:1" id="OiH-KJ-vEm"/>
-                <constraint firstItem="VV5-4n-yA9" firstAttribute="centerY" secondItem="GVv-Ny-NyT" secondAttribute="centerY" id="S09-jp-GrK"/>
-                <constraint firstItem="tZe-SV-Y7W" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="20" id="SvQ-DB-KuH"/>
-                <constraint firstItem="GVv-Ny-NyT" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="Tro-oN-Ejq"/>
-                <constraint firstItem="UhC-ya-6rS" firstAttribute="width" secondItem="UhC-ya-6rS" secondAttribute="height" multiplier="1:1" id="WI6-Qe-SgD"/>
-                <constraint firstItem="2un-KD-Bue" firstAttribute="centerY" secondItem="8Ms-jg-tVZ" secondAttribute="centerY" id="XSg-ju-gA6"/>
-                <constraint firstItem="VV5-4n-yA9" firstAttribute="width" secondItem="VV5-4n-yA9" secondAttribute="height" multiplier="1:1" id="XYj-6H-dBK"/>
-                <constraint firstItem="VV5-4n-yA9" firstAttribute="width" secondItem="VV5-4n-yA9" secondAttribute="height" multiplier="1:1" id="ZeZ-8Z-PvK"/>
-                <constraint firstItem="2un-KD-Bue" firstAttribute="leading" secondItem="tZe-SV-Y7W" secondAttribute="leading" id="ZtE-h8-GQz"/>
-                <constraint firstItem="UhC-ya-6rS" firstAttribute="width" secondItem="UhC-ya-6rS" secondAttribute="height" multiplier="1:1" id="aoc-Zn-eUl"/>
-                <constraint firstItem="tZe-SV-Y7W" firstAttribute="width" secondItem="tZe-SV-Y7W" secondAttribute="height" multiplier="1:1" id="cII-mG-Lz6"/>
-                <constraint firstItem="nlz-eP-HyR" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="80" id="cxs-N2-gWS"/>
-                <constraint firstItem="7Eg-fa-NT4" firstAttribute="width" secondItem="7Eg-fa-NT4" secondAttribute="height" multiplier="1:1" id="exH-HX-UrM"/>
-                <constraint firstItem="1DV-TS-7Uo" firstAttribute="width" secondItem="1DV-TS-7Uo" secondAttribute="height" multiplier="1:1" id="gyq-Bw-asd"/>
-                <constraint firstItem="1DV-TS-7Uo" firstAttribute="leading" secondItem="tZe-SV-Y7W" secondAttribute="leading" id="i9b-dC-WLB"/>
-                <constraint firstItem="1DV-TS-7Uo" firstAttribute="centerY" secondItem="GVv-Ny-NyT" secondAttribute="centerY" id="jZk-4H-dCH"/>
-                <constraint firstItem="8Ms-jg-tVZ" firstAttribute="top" secondItem="nlz-eP-HyR" secondAttribute="bottom" constant="50" id="nsA-Gq-bwy"/>
-                <constraint firstItem="2un-KD-Bue" firstAttribute="width" secondItem="2un-KD-Bue" secondAttribute="height" multiplier="1:1" id="oF6-AW-m9O"/>
-                <constraint firstItem="7Eg-fa-NT4" firstAttribute="centerY" secondItem="nlz-eP-HyR" secondAttribute="centerY" id="oQv-ft-l0l"/>
-                <constraint firstItem="VV5-4n-yA9" firstAttribute="width" secondItem="VV5-4n-yA9" secondAttribute="height" multiplier="1:1" id="sbE-t0-G7M"/>
-                <constraint firstItem="1DV-TS-7Uo" firstAttribute="width" secondItem="1DV-TS-7Uo" secondAttribute="height" multiplier="1:1" id="wPC-IW-zQP"/>
+                <constraint firstItem="xyX-9e-jy9" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="60" id="lcc-R1-89e"/>
+                <constraint firstAttribute="trailing" secondItem="xyX-9e-jy9" secondAttribute="trailing" id="q26-Ga-BTK"/>
+                <constraint firstItem="xyX-9e-jy9" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="ty3-a4-vhq"/>
             </constraints>
-            <point key="canvasLocation" x="-223" y="57"/>
+            <point key="canvasLocation" x="-235" y="7"/>
         </view>
     </objects>
 </document>
