--- a/TrainingExe1/Exam8Cell.xib
+++ b/TrainingExe1/Exam8Cell.xib
@@ -1,19 +1,87 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="11762" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="Exam8Cell" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="91" id="KGk-i7-Jjw" customClass="Exam8Cell" customModule="TrainingExe1" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="90"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <frame key="frameInset" width="320" height="43"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="90"/>
                 <autoresizingMask key="autoresizingMask"/>
+                <subviews>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="T58-Fz-z0Q">
+                        <rect key="frame" x="8" y="10" width="70" height="70"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="70" id="WF8-Et-WvU"/>
+                            <constraint firstAttribute="width" constant="70" id="qTq-aW-Rsc"/>
+                        </constraints>
+                    </imageView>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Anc-Ld-rLu">
+                        <rect key="frame" x="86" y="10" width="42" height="21"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="TMq-08-9lo">
+                        <rect key="frame" x="270" y="10" width="42" height="21"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7pI-k7-fan">
+                        <rect key="frame" x="86" y="59" width="42" height="21"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tlX-Xk-KWF">
+                        <rect key="frame" x="270" y="59" width="42" height="21"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <view alpha="0.65000000000000002" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="GdH-cX-jit">
+                        <rect key="frame" x="0.0" y="89" width="320" height="1"/>
+                        <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="1" id="WE5-0P-Oyt"/>
+                        </constraints>
+                    </view>
+                </subviews>
+                <constraints>
+                    <constraint firstItem="tlX-Xk-KWF" firstAttribute="trailing" secondItem="TMq-08-9lo" secondAttribute="trailing" id="0u4-NF-XQR"/>
+                    <constraint firstAttribute="leadingMargin" secondItem="T58-Fz-z0Q" secondAttribute="leading" id="55F-NE-qgz"/>
+                    <constraint firstAttribute="trailingMargin" secondItem="GdH-cX-jit" secondAttribute="trailing" constant="-8" id="EM6-Yh-rhi"/>
+                    <constraint firstItem="Anc-Ld-rLu" firstAttribute="leading" secondItem="T58-Fz-z0Q" secondAttribute="trailing" constant="8" id="GhE-Ve-o5G"/>
+                    <constraint firstItem="GdH-cX-jit" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="-8" id="Iw6-Ep-436"/>
+                    <constraint firstAttribute="trailingMargin" secondItem="TMq-08-9lo" secondAttribute="trailing" id="SgF-ca-z9s"/>
+                    <constraint firstItem="tlX-Xk-KWF" firstAttribute="centerY" secondItem="7pI-k7-fan" secondAttribute="centerY" id="ZDL-XB-EIq"/>
+                    <constraint firstAttribute="bottomMargin" secondItem="GdH-cX-jit" secondAttribute="bottom" constant="-8" id="ZhI-kf-oVT"/>
+                    <constraint firstItem="7pI-k7-fan" firstAttribute="leading" secondItem="Anc-Ld-rLu" secondAttribute="leading" id="iaj-pq-NJw"/>
+                    <constraint firstItem="T58-Fz-z0Q" firstAttribute="centerY" secondItem="H2p-sc-9uM" secondAttribute="centerY" id="l81-pD-Lcn"/>
+                    <constraint firstItem="7pI-k7-fan" firstAttribute="bottom" secondItem="T58-Fz-z0Q" secondAttribute="bottom" id="rgk-tc-VMB"/>
+                    <constraint firstItem="Anc-Ld-rLu" firstAttribute="top" secondItem="T58-Fz-z0Q" secondAttribute="top" id="zNS-ig-8RT"/>
+                    <constraint firstItem="TMq-08-9lo" firstAttribute="centerY" secondItem="Anc-Ld-rLu" secondAttribute="centerY" id="zg3-xs-0SQ"/>
+                </constraints>
             </tableViewCellContentView>
+            <connections>
+                <outlet property="collectionNameLabel" destination="7pI-k7-fan" id="NcE-oF-W32"/>
+                <outlet property="thumbImageView" destination="T58-Fz-z0Q" id="ksb-L7-l2K"/>
+                <outlet property="trackGenreLabel" destination="tlX-Xk-KWF" id="odO-bH-4M9"/>
+                <outlet property="trackNameLabel" destination="Anc-Ld-rLu" id="LDt-nE-mhU"/>
+                <outlet property="trackPrice" destination="TMq-08-9lo" id="GhM-Ke-9fL"/>
+            </connections>
+            <point key="canvasLocation" x="-104" y="42"/>
         </tableViewCell>
     </objects>
 </document>
