--- a/TrainingExe1/Exam4/ViewController/Exam4.xib
+++ b/TrainingExe1/Exam4/ViewController/Exam4.xib
@@ -13,7 +13,7 @@
             <connections>
                 <outlet property="editButton" destination="hao-JU-1Gr" id="Bvj-Px-YpJ"/>
                 <outlet property="moveButton" destination="eyb-A5-UM5" id="R1A-aU-bwQ"/>
-                <outlet property="tableView" destination="vNx-0C-20S" id="dMv-To-fqM"/>
+                <outlet property="tableView" destination="6p2-lN-c7r" id="dQo-p2-GBI"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -22,19 +22,12 @@
             <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="none" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="vNx-0C-20S">
-                    <rect key="frame" x="0.0" y="90" width="375" height="577"/>
-                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                    <connections>
-                        <outlet property="dataSource" destination="-1" id="yIp-eB-V0g"/>
-                        <outlet property="delegate" destination="-1" id="Pke-4Q-LDs"/>
-                    </connections>
-                </tableView>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hao-JU-1Gr">
                     <rect key="frame" x="15" y="60" width="50" height="30"/>
                     <color key="backgroundColor" red="0.93725490570000003" green="0.93725490570000003" blue="0.95686274770000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="50" id="3At-qw-bKJ"/>
+                        <constraint firstAttribute="height" constant="30" id="qpR-wX-8fS"/>
                     </constraints>
                     <state key="normal" title="Edit"/>
                     <connections>
@@ -46,25 +39,34 @@
                     <color key="backgroundColor" red="0.93725490570000003" green="0.93725490570000003" blue="0.95686274770000002" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     <constraints>
                         <constraint firstAttribute="width" constant="50" id="Wn3-0o-zWy"/>
+                        <constraint firstAttribute="height" constant="30" id="aoC-qa-GUn"/>
                     </constraints>
                     <state key="normal" title="Move"/>
                     <connections>
                         <action selector="actionMove:" destination="-1" eventType="touchUpInside" id="Ki7-QI-4bJ"/>
                     </connections>
                 </button>
+                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="none" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="6p2-lN-c7r">
+                    <rect key="frame" x="0.0" y="90" width="375" height="577"/>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    <connections>
+                        <outlet property="dataSource" destination="-1" id="9Q2-PX-tgq"/>
+                        <outlet property="delegate" destination="-1" id="iyZ-PH-xkX"/>
+                    </connections>
+                </tableView>
             </subviews>
-            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
             <constraints>
-                <constraint firstItem="vNx-0C-20S" firstAttribute="top" secondItem="hao-JU-1Gr" secondAttribute="bottom" id="021-Am-fEq"/>
-                <constraint firstAttribute="trailing" secondItem="vNx-0C-20S" secondAttribute="trailing" id="NqO-cq-Z7P"/>
+                <constraint firstAttribute="bottom" secondItem="6p2-lN-c7r" secondAttribute="bottom" id="5rl-3d-zhA"/>
+                <constraint firstItem="6p2-lN-c7r" firstAttribute="top" secondItem="hao-JU-1Gr" secondAttribute="bottom" id="6BC-S0-aEb"/>
+                <constraint firstItem="6p2-lN-c7r" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="6hX-zZ-PuV"/>
+                <constraint firstAttribute="trailing" secondItem="6p2-lN-c7r" secondAttribute="trailing" id="LTD-10-fhG"/>
                 <constraint firstAttribute="trailing" secondItem="eyb-A5-UM5" secondAttribute="trailing" constant="15" id="VbX-1u-vIo"/>
                 <constraint firstItem="hao-JU-1Gr" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="15" id="YAA-HF-jHq"/>
                 <constraint firstItem="eyb-A5-UM5" firstAttribute="centerY" secondItem="hao-JU-1Gr" secondAttribute="centerY" id="jBb-1r-YWE"/>
                 <constraint firstItem="hao-JU-1Gr" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="60" id="pVo-Ea-eFy"/>
-                <constraint firstItem="vNx-0C-20S" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="pz9-MO-de3"/>
-                <constraint firstAttribute="bottom" secondItem="vNx-0C-20S" secondAttribute="bottom" id="yyC-rC-Fs1"/>
             </constraints>
-            <point key="canvasLocation" x="-110" y="-83"/>
+            <point key="canvasLocation" x="8.5" y="-71.5"/>
         </view>
     </objects>
 </document>
